added photoshopped images for featured projects

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Work+Sans:wght@500&display=swap"
     rel="stylesheet">
-  <title>Jason Yata | Dev & Design</title>
+  <title>Jason Yata</title>
 </head>
 
 <body>
